# feta-rs

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
crates/feta/: Cargo.toml  README.md
crates/feta/src/: config.rs  context.rs  decision.rs  error.rs  feature.rs  features.rs  hash.rs  lib.rs  rule.rs  value.rs
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs
crates/integration/tests/: cases.json  config.json
crates/wasi/: Cargo.toml  README.md
crates/wasi/src/: lib.rs  tracking.rs  types.rs
crates/wasi/tests/: integration.rs
crates/wasi/wit/: feta-wasi.wit
