[package]
name = "feta"
version.workspace = true
edition.workspace = true

[dependencies]
mexl = { git = "https://github.com/stevecallear/mexl-rs", version = "0.3", features = ["serde"] }
murmur3 = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"